tests/snapshots/examples_fixtures/diagnostics_demos__errors__unknown_prefix_operator_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/unknown_prefix_operator_error.flx
== compile ==
failed (parse)
== diagnostics ==
error[E031]: Expected Expression

Expected expression, found an invalid token.

  examples/diagnostics_demos/errors/unknown_prefix_operator_error.flx:3:1
  |
3 | ~1;
  | ^
== stdout ==
<not executed>
